pain and suffering and pain