@@ -12,10 +12,18 @@ import it.unimi.dsi.fastutil.objects.Object2IntMap;
 import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.multiplayer.chat.report.ReportEnvironment;
+import net.minecraft.core.DefaultedRegistry;
 import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.TickTask;
 import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.world.entity.Entity;
+import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.entity.LivingEntity;
+import net.minecraft.world.entity.monster.Skeleton;
+import net.minecraft.world.entity.monster.Zombie;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
@@ -23,9 +31,16 @@ import net.minecraft.world.level.block.Block;
 import net.neoforged.neoforge.energy.IEnergyStorage;
 import net.neoforged.neoforge.network.PacketDistributor;
 import net.neoforged.neoforge.network.handling.IPayloadContext;
+import net.neoforged.neoforge.registries.NeoForgeRegistries;
 import org.jetbrains.annotations.Nullable;
 
+import java.lang.reflect.Field;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public final class PayloadActions {
     public static void chunkAnalyzerAction(ChunkAnalyzerTogglePayload payload, IPayloadContext ctx) {
@@ -39,13 +54,37 @@ public final class PayloadActions {
                     if (drained == CarbortConfig.chunkAnalyzerEnergyUsage) {
                         ChunkAnalyzerHelper helper = new ChunkAnalyzerHelper(player, player.level());
                         Object2IntMap<Block> blocks = helper.scan();
+                        Object2IntMap<LivingEntity> entities = helper.scanEntities();
                         energyStorage.extractEnergy(CarbortConfig.chunkAnalyzerEnergyUsage, false);
                         PacketDistributor.sendToPlayer(serverPlayer, new ChunkAnalyzerTogglePayload((byte) 1));
+                        Map<Class<? extends Entity>, EntityType<?>> entityTypeMap = new HashMap<>();
+                        for (Field field : EntityType.class.getDeclaredFields()) {
+                            if (EntityType.class.isAssignableFrom(field.getType())) {
+                                try {
+                                    EntityType<?> entityType = (EntityType<?>) field.get(null);
+                                    entityTypeMap.put(entityType.getBaseClass(), entityType);
+                                } catch (IllegalAccessException e) {
+                                    e.printStackTrace();
+                                }
+                            }
+                        }
                         List<Integer> blocks1 = blocks.keySet()
                                 .stream()
                                 .map(BuiltInRegistries.BLOCK::getId)
                                 .toList();
-                        ChunkAnalyzerDataPayload payload1 = new ChunkAnalyzerDataPayload(blocks1, blocks.values().stream().toList());
+
+                        List<Integer> entities1 = entities.keySet()
+                                .stream()
+                                .map(entityClass -> {
+                                    EntityType<?> entityType = entityTypeMap.get(entityClass);
+                                    if (entityType != null) {
+                                        return BuiltInRegistries.ENTITY_TYPE.getId(entityType);
+                                    } else {
+                                        throw new IllegalArgumentException("No EntityType found for class: " + entityClass.getName());
+                                    }
+                                })
+                                .collect(Collectors.toList());
+                        ChunkAnalyzerDataPayload payload1 = new ChunkAnalyzerDataPayload(blocks1, blocks.values().stream().toList(), entities1, entities.values().stream().toList());
                         PacketDistributor.sendToPlayer(serverPlayer, payload1);
                     } else  {
                         PacketDistributor.sendToPlayer(serverPlayer, new ChunkAnalyzerTogglePayload((byte) 2));
@@ -66,7 +105,6 @@ public final class PayloadActions {
             }
         }
     }
-
     private static @Nullable ItemStack getAnalyzer(Player player) {
         if (player.getMainHandItem().getItem() instanceof ChunkAnalyzerItem) {
             return player.getMainHandItem();
@@ -80,6 +118,7 @@ public final class PayloadActions {
         Screen screen = Minecraft.getInstance().screen;
         if (screen instanceof ChunkAnalyzerScreen screen1) {
             screen1.setBlocks(payload.blocks(), payload.amounts());
+            screen1.setEntities(payload.entities(), payload.entityamount());
         }
     }
 }
